[gd_scene load_steps=6 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://assets/car.png" type="Texture" id=2]
[ext_resource path="res://assets/wheel.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 22, 44 )

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 0.0
color = Color( 0.0976563, 0.0786304, 0.0541687, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Scale" ]

[node name="Car" type="Node2D" index="0"]

position = Vector2( 515, 538 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
nickname = "Player"
gas_pedal_key = "up_1"
brake_pedal_key = "down_1"
turn_left_key = "left_1"
turn_right_key = "right_1"
max_forward_speed = 40.0
forward_acceleration = 12.2
max_backward_speed = -5.0
backward_brake_acceleration = -10.0
backward_drive_acceleration = -4.2
max_left_wheel_rotation_angle = -40
max_right_wheel_rotation_angle = 40
wheel_rotation_speed = 100
agility = 0.1
default_ground_friction_factor = 0.9

[node name="Sprite" type="Sprite" parent="." index="0"]

z_index = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="Wheels" type="Node2D" parent="." index="1"]

[node name="UpperLeft" type="Node2D" parent="Wheels" index="0"]

editor/display_folded = true
position = Vector2( -23, -16 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Wheels/UpperLeft" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="UpperRight" type="Node2D" parent="Wheels" index="1"]

editor/display_folded = true
position = Vector2( 23, -16 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Wheels/UpperRight" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="BottomLeft" type="Node2D" parent="Wheels" index="2"]

editor/display_folded = true
position = Vector2( -23, 32 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Wheels/BottomLeft" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="BottomRight" type="Node2D" parent="Wheels" index="3"]

editor/display_folded = true
position = Vector2( 23, 32 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Wheels/BottomRight" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 3
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="RightDirt" type="Particles2D" parent="." index="3"]

position = Vector2( 24, 42 )
emitting = true
amount = 100
lifetime = 0.8
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Textures" ]

[node name="LeftDirt" type="Particles2D" parent="." index="4"]

position = Vector2( -23, 42 )
emitting = true
amount = 100
lifetime = 0.8
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Textures" ]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]


